CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(samples)
FIND_PACKAGE(OpenSceneGraph REQUIRED osgViewer)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${OPENSCENEGRAPH_INCLUDE_DIRS})
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
ADD_EXECUTABLE(pyramid pyramid.cc graphics.cc)
TARGET_LINK_LIBRARIES(pyramid ${OPENSCENEGRAPH_LIBRARIES})
